# frustraMPNN

./: .coverage  .gitignore  README.md  download_data.sh  install_frustraMPNN.sh  pyproject.toml  run_cmd_docker.sh  run_cmd_singularity.sh  run_local_training.sh
.github/: dependabot.yml
.github/workflows/: lint.yml  publish.yml  test.yml
docker/: Dockerfile  Singularity  build_docker.sh  build_singu_from_docker.sh  run_docker.sh  run_singularity.sh
docs/: MIGRATION.md  batch-processing.md  configuration.md  containers.md  index.md  installation.md  output-format.md  quickstart.md  validation.md  visualization.md
docs/api/: cli.md  python-api.md  reference.md
docs/site/: 404.html  README.md  _config.yml  docs.html  index.html
docs/site/assets/css/: style.css
docs/training/: README.md
docs/tutorials/: basic-analysis.md  enzyme-analysis.md  index.md
example/: 1ubq_pred.csv
inference/: __init__.py  config.yaml  custom_inference.py  custom_inference_refac.py  transfer_model_pl.py  utils.py
notebooks/: FrustraMPNN_Colab.ipynb  FrustraMPNN_Local.ipynb
scripts/: README.md  plot_aa_error_heatmap.py  plot_comparison.py  plot_location_error.py  plot_secstruct_error.py
scripts/analysis/: plot_aa_error_heatmap.py  plot_comparison.py  plot_location_error.py  plot_secstruct_error.py
scripts/data/: download_data.sh
scripts/setup/: install_frustraMPNN.sh
scripts/training/: run_local_training.sh
singularity/: Singularity
src/frustrampnn/: __init__.py  constants.py  py.typed
src/frustrampnn/cli/: __init__.py  main.py
src/frustrampnn/data/: __init__.py  mutation.py
src/frustrampnn/inference/: __init__.py  predictor.py
src/frustrampnn/model/: __init__.py  features.py  featurization.py  layers.py  model_utils.py  pdb_parsing.py  protein_mpnn.py  transfer_model.py
src/frustrampnn/training/: __init__.py  cache.py  config.py  metrics.py  trainer.py  utils.py
src/frustrampnn/training/datasets/: __init__.py  base.py  combo.py  fireprot.py  megascale.py
src/frustrampnn/training/lightning/: __init__.py  callbacks.py  module.py
src/frustrampnn/training/loss/: __init__.py  mse.py  reweighting.py
src/frustrampnn/validation/: __init__.py  compare.py  frustrapy_wrapper.py  metrics.py  results.py
src/frustrampnn/visualization/: __init__.py  _core.py  heatmap.py  plots.py  sankey.py  sequence_map.py  single_residue.py
tests/: __init__.py  conftest.py  test_backward_compat.py  test_cli.py  test_constants.py  test_data_mutation.py  test_inference_batch.py  test_inference_predictor.py  test_integration.py  test_model_features.py  test_model_layers.py  test_model_pdb_parsing.py  test_model_protein_mpnn.py  test_model_transfer.py  test_package.py  test_regression.py  test_training_config.py  test_training_datasets.py  test_training_lightning.py  test_training_loss.py  test_validation.py  test_visualization.py
training/: config.yaml  datasets.py  model_utils.py  optimize.py  train_thermompnn_refac.py  transfer_model.py
